--- a/WeCanHelp/GraphExplorerMVC/Views/Shared/_Layout.cshtml
+++ b/WeCanHelp/GraphExplorerMVC/Views/Shared/_Layout.cshtml
@@ -20,9 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Assets", "Index", "Assets")</li>
                     <li>@Html.ActionLink("Org Explorer", "Index", "User")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
