--- a/WeCanHelp/GraphExplorerMVC/Views/Assets/Create.cshtml
+++ b/WeCanHelp/GraphExplorerMVC/Views/Assets/Create.cshtml
@@ -49,10 +49,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Asset.Published, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Asset.Published, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Asset.Published, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Asset.Published, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Asset.Published, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Asset.Published, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Asset.Tag, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Asset.Tag, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Asset.Tag, "", new { @class = "text-danger" })
             </div>
         </div>
 
