--- a/WeCanHelp/GraphExplorerMVC/Views/Assets/Index.cshtml
+++ b/WeCanHelp/GraphExplorerMVC/Views/Assets/Index.cshtml
@@ -27,6 +27,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Published)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Tag)
+        </th>
         <th></th>
     </tr>
 
@@ -47,6 +50,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Published)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tag)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
